# sdl_texture2

./: .gitignore  LICENSE
.github/workflows/: ci-vcpkg.yml  ci.yml
cmake/: sdl2.cmake
d3dx9_cube/: CMakeLists.txt
d3dx9_cube/src/: d3dx9_cube.cpp
metadata_from_dds/: CMakeLists.txt  CMakePresets.json
metadata_from_dds/src/: metadata_from_dds.cpp
sdl_d3d9_cube/: CMakeLists.txt  CMakePresets.json
sdl_d3d9_cube/src/: sdl_d3d9_cube.cpp
sdl_pure_triangle/: CMakeLists.txt
sdl_pure_triangle/src/: sdl_pure_triangle.cpp
